Finished version first of game. In future add few new functional

--- a/index.html
+++ b/index.html
@@ -198,6 +198,12 @@
                 </div>
             </div>
         </div>
+        <div class="dialog-window dialog-window--hidden">
+            <div class="dialog-window__wrapper">
+                <h2 class="dialog-window__result">You loooosssee</h2>
+                <button class="btn btn--again">Zagraj ponownie!</button>
+            </div>
+        </div>
     </div>
     <script src="dist/js/game.js"></script>
 </body>
